@@ -1,0 +1,4 @@
+Adjust "Zoom Height" to individual screens by momemtarily maximizing the
+window on first use with a particular screen.  Changing screen settings
+may invalidate the saved height.  While a window is maximized,
+"Zoom Height" has no effect.
